<?xml version="1.0"?>
<package format="3">
  <name>cnr_tf_named_object_loader</name>
  <version>0.0.0</version>
  <description>The cnr_tf_named_object_loader package</description>

  <maintainer email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</maintainer>

  <license>Apache License</license>
  <license file="LICENSE">Apache License</license>

  <!-- <url type="website">http://wiki.ros.org/cnr_tf_named_object_loader</url> -->

  <author email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <test_depend>ur10e_moveit_config</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>cmake</build_type>

  </export>
</package>
